# type_checker

./: .flake8  .gitignore  .mypy.ini  Makefile  README.md  pyproject.toml
.github/workflows/: makefile.yml
src/type_checker/advanced/buffer/: buffer.py
src/type_checker/advanced/decorator/: decorator.py
src/type_checker/advanced/forward/: forward.py
src/type_checker/advanced/generator/: generator.py
src/type_checker/advanced/generic_class/: generic_class.py
src/type_checker/advanced/never/: never.py
src/type_checker/advanced/never2/: never2.py
src/type_checker/advanced/overload/: overload.py
src/type_checker/advanced/overload_literal/: overload_literal.py
src/type_checker/advanced/protocol/: protocol.py
src/type_checker/advanced/recursive/: recursive.py
src/type_checker/advanced/type/: type.py
src/type_checker/advanced/typed_dict/: typed_dict.py
src/type_checker/advanced/typeguard/: typeguard.py
src/type_checker/basic/any/: any.py
src/type_checker/basic/dict/: dict.py
src/type_checker/basic/final/: final.py
src/type_checker/basic/kwargs/: kwargs.py
src/type_checker/basic/list/: list.py
src/type_checker/basic/optional/: optional.py
src/type_checker/basic/tuple/: tuple.py
src/type_checker/basic/union/: union.py
src/type_checker/basic/variable/: variable.py
src/type_checker/extreme/variance/: variance.py
